# yt-yapper

./: .env.example  .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  readme.md
.github/workflows/: build.yml
.sqlx/: query-0a34d97893d306f87cd2bb00fc865cef00c13270c488699e45e0940b94333d71.json  query-ab421b14ff3820296208e04fb2e1de127cb7f58a065e8ce63bf5a4061b77a947.json
migrations/: 20241209130111_user.sql
src/: main.rs
src/commands/: clear.rs  fmlogin.rs  login.rs  mod.rs  music.rs  now.rs  pause.rs  ping.rs  play.rs  remove.rs  repeat.rs  seek.rs  skip.rs  utils.rs  yt.rs
src/events/: mod.rs  track_error_notifier.rs  track_queue_event.rs
src/models/: mod.rs  pagination.rs  spotify.rs
src/persistence/: connection.rs  mod.rs
src/persistence/entities/: user.rs
src/queue/: mod.rs
src/scrobbler/: mod.rs
src/server/: mod.rs
src/spotify/: mod.rs
src/state/: mod.rs
