[package]
name = "mb"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.11", features = ["stream"] }
serenity = "0.12.2"
songbird = { version = "0.4.3", features = ["builtin-queue"] }
tokio = { version = "1.41.1", features = ["full"] }
symphonia = { version = "0.5.2", features = [
    'pcm',
    'mp3',
    'wav',
    'isomp4',
    'aac',
    'alac',
] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
anyhow = "1.0.93"
rustfm-scrobble = "1.1.1"
