[package]
name = "mb"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serenity = "0.12.2"
songbird ={version = "0.4.3", features = ["builtin-queue"]}
tokio = { version = "1.41.1", features = ["full"] }
symphonia = { version = "0.5.2", features = ['pcm','mp3','wav','isomp4','aac','alac'] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
futures = "0.3.31"
rspotify = "0.13.3"
serde = "1.0.215"
serde_derive = "1.0.215"
serde_json = "1.0.132"
console-subscriber = "0.4.1"
