[package]
name = "mb"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serenity = "0.12.2"
songbird = { version = "0.4.3", features = ["builtin-queue"] }
tokio = { version = "1.41.1", features = ["full"] }
symphonia = { version = "0.5.2", features = [
    'pcm',
    'mp3',
    'wav',
    'isomp4',
    'aac',
    'alac',
] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.83"
dotenv = "0.15.0"
anyhow = "1.0.95"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }
rustfm-scrobble = "1.1.1"
spotify-rs = "0.3.14"
regex = "1.11.1"
